core/unpackaged/main/default/objects/Opportunity/fields/Account_City_State__c.field-meta.xml
<CustomField>
    <fullName>Account_City_State__c</fullName>
    <formula>Account.BillingCity + ", " +  Account.BillingState</formula>
    <label>Account City/State</label>
    <type>Text</type>
</CustomField>