core/unpackaged/main/default/objects/Opportunity/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <formula>Account.External_ID_No_Comma__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Identifying Number associated with Account Name. Dash at end of number identifies what currency they purchase in. -01 is USD and -02 is CAD.</inlineHelpText>
    <label>Account Number</label>
    <type>Text</type>
</CustomField>