core/unpackaged/main/default/objects/Opportunity/fields/Branch_Number__c.field-meta.xml
<CustomField>
    <fullName>Branch_Number__c</fullName>
    <formula>Account.Branch_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch Number</label>
    <type>Text</type>
</CustomField>