core/unpackaged/main/default/objects/Opportunity/fields/Competitor_Name__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Name__c</fullName>
    <label>Competitor Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Superior</fullName>
            </value>
            <value>
                <fullName>Martin</fullName>
            </value>
            <value>
                <fullName>Luff</fullName>
            </value>
            <value>
                <fullName>Douglas (Rulmeca)</fullName>
            </value>
            <value>
                <fullName>FMC (Syntron)</fullName>
            </value>
            <value>
                <fullName>Prok</fullName>
            </value>
            <value>
                <fullName>Mine Duty Idler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>