core/unpackaged/main/default/objects/Opportunity/fields/Complex_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Complex_Pricing__c</fullName>
    <formula>Account.Complex_Pricing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complex Pricing</label>
    <type>Checkbox</type>
</CustomField>