core/unpackaged/main/default/objects/Opportunity/fields/Customer_Request_Subject__c.field-meta.xml
<CustomField>
    <fullName>Customer_Request_Subject__c</fullName>
    <label>Customer Request Subject</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>