core/unpackaged/main/default/objects/Opportunity/fields/Decline_To_Quote__c.field-meta.xml
<CustomField>
    <fullName>Decline_To_Quote__c</fullName>
    <description>Choose the best reason for why PPI is not quoting request from customer</description>
    <inlineHelpText>Manufacturing Limitations- Product Requirements and/or requested build fall outside of manufacturing capabilities;

Material Constraints- Material specified is not one we currently support or source;

Use Environment or Location Limitations-  Intended application or environmental conditions exceed our products tested performance range or compliance standards</inlineHelpText>
    <label>Decline To Quote</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manufacturing Limitations</fullName>
            </value>
            <value>
                <fullName>Material Constraints</fullName>
            </value>
            <value>
                <fullName>Use Location Restrictions</fullName>
                <label>Use Environment or  Location Limitations</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>