core/unpackaged/main/default/objects/Opportunity/fields/Discount_Reason__c.field-meta.xml
<CustomField>
    <fullName>Discount_Reason__c</fullName>
    <description>Please select any values that apply.</description>
    <inlineHelpText>Gain Market Share – Strategic discount to secure or grow business.
Courtesy Credit – Customer satisfaction gesture (no error by PPI).
PPI Error – Internal mistake identified before shipping.
Samples – Products provided free of charge</inlineHelpText>
    <label>Discount Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gain Market Share</fullName>
            </value>
            <value>
                <fullName>Courtesy Credit</fullName>
                <label>Courtesy Discount</label>
            </value>
            <value>
                <fullName>PPI Error</fullName>
            </value>
            <value>
                <fullName>Samples</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>