core/unpackaged/main/default/objects/Opportunity/fields/Email_Content__c.field-meta.xml
<CustomField>
    <fullName>Email_Content__c</fullName>
    <inlineHelpText>Email Content sent in by customer. Information to be used for Opportunity</inlineHelpText>
    <label>Customer Request</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>