core/unpackaged/main/default/objects/Opportunity/fields/Estimating_Handoff__c.field-meta.xml
<CustomField>
    <fullName>Estimating_Handoff__c</fullName>
    <inlineHelpText>Date and Time that Estimating request was sent in either Quoted Development or Quote Adjustment Stage using Send to Estimating button</inlineHelpText>
    <label>Estimating Handoff</label>
    <type>DateTime</type>
</CustomField>