core/unpackaged/main/default/objects/Opportunity/fields/Expedite_Charge_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expedite_Charge_Amount__c</fullName>
    <description>The fee added to quote or order to accommodate quicker than standard delivery</description>
    <inlineHelpText>The fee added to quote or order to accommodate quicker than standard delivery</inlineHelpText>
    <label>Expedite Charge Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>