core/unpackaged/main/default/objects/Opportunity/fields/Expedites_Breakdowns_Completed__c.field-meta.xml
<CustomField>
    <fullName>Expedites_Breakdowns_Completed__c</fullName>
    <label>Expedites\Breakdowns Completed</label>
    <type>DateTime</type>
</CustomField>