core/unpackaged/main/default/objects/Opportunity/fields/Expedites_Breakdowns_Handoff__c.field-meta.xml
<CustomField>
    <fullName>Expedites_Breakdowns_Handoff__c</fullName>
    <label>Expedites\Breakdowns Handoff</label>
    <type>DateTime</type>
</CustomField>