core/unpackaged/main/default/objects/Opportunity/fields/Expedites_Breakdowns_Time__c.field-meta.xml
<CustomField>
    <fullName>Expedites_Breakdowns_Time__c</fullName>
    <formula>(Expedites_Breakdowns_Completed__c - Expedites_Breakdowns_Handoff__c)*24*60</formula>
    <inlineHelpText>Tracks the difference between "Expedites\Breakdowns Handoff" and "Expedites\Breakdowns Completed" in minutes. This does not take into account business hours.</inlineHelpText>
    <label>Expedites\Breakdowns Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>