core/unpackaged/main/default/objects/Opportunity/fields/Freight_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Freight_Agreement__c</fullName>
    <formula>Account.Freight_Agreement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Freight Agreement</label>
    <type>Checkbox</type>
</CustomField>