core/unpackaged/main/default/objects/Opportunity/fields/Indirect_Customer__c.field-meta.xml
<CustomField>
    <fullName>Indirect_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If Indirect Customer is not found in list then leave as None. 
This list of Indirect Customers are only those that affect Special Pricing Discount decision</inlineHelpText>
    <label>Indirect Customer</label>
    <referenceTo>Indirect_Customer__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>