core/unpackaged/main/default/objects/Opportunity/fields/IsVRBypassed__c.field-meta.xml
<CustomField>
    <fullName>IsVRBypassed__c</fullName>
    <formula>BLANKVALUE( Validation_Bypass_Datetime__c , $System.OriginDateTime) &gt; NOW() - 0.00005787037 /*Five Seconds*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsVRBypassed</label>
    <type>Checkbox</type>
</CustomField>