core/unpackaged/main/default/objects/Opportunity/fields/Last_Approver__c.field-meta.xml
<CustomField>
    <fullName>Last_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunity_Approvers</relationshipName>
    <type>Lookup</type>
</CustomField>