core/unpackaged/main/default/objects/Opportunity/fields/Lead_Conversion_Time__c.field-meta.xml
<CustomField>
    <fullName>Lead_Conversion_Time__c</fullName>
    <inlineHelpText>This field calculates the minutes, in business hours only, from when a Lead was created to when it was converted into an Opportunity.</inlineHelpText>
    <label>Lead Conversion Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>