core/unpackaged/main/default/objects/Opportunity/fields/Lead_Queue__c.field-meta.xml
<CustomField>
    <fullName>Lead_Queue__c</fullName>
    <inlineHelpText>Lead Queue responsible for managing assignment and follow up related to this opportunity. Queue is selected based off of email opportunity comes in from. Please ensure correct lead is chosen to help with proper routing and tracking of sales efforts.</inlineHelpText>
    <label>Lead Queue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lead_Queue</valueSetName>
    </valueSet>
</CustomField>