core/unpackaged/main/default/objects/Opportunity/fields/Merge_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Merge_Date_Time__c</fullName>
    <label>Merge Date/Time</label>
    <type>DateTime</type>
</CustomField>