core/unpackaged/main/default/objects/Opportunity/fields/Open_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Open_Tasks__c</fullName>
    <inlineHelpText>Number of Open Tasks related to Opportunity.  Must be at 0 to proceed to Quote Complete.
Tasks related to opportunity may be found in Activity Center</inlineHelpText>
    <label>Open Tasks</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>