core/unpackaged/main/default/objects/Opportunity/fields/Open_Work_Items__c.field-meta.xml
<CustomField>
    <fullName>Open_Work_Items__c</fullName>
    <description>These are open orchestration work items (special pricing request)</description>
    <inlineHelpText>The number of open work items for special pricing. This number must be at Zero to proceed to Quote complete stage.</inlineHelpText>
    <label>Open Work Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>