core/unpackaged/main/default/objects/Opportunity/fields/Opportunity_Contact__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the Customer Contact who initiated the Request for Quote</description>
    <inlineHelpText>This is the Customer Contact who initiated the Request for Quote</inlineHelpText>
    <label>Opportunity Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>