core/unpackaged/main/default/objects/Opportunity/fields/Opportunity_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Contact_Email__c</fullName>
    <formula>Opportunity_Contact__r.Email</formula>
    <label>Opportunity Contact Email</label>
    <type>Text</type>
</CustomField>