core/unpackaged/main/default/objects/Opportunity/fields/Opportunity_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Contact_Phone__c</fullName>
    <formula>Account.Phone</formula>
    <label>Opportunity Contact Phone</label>
    <type>Text</type>
</CustomField>