core/unpackaged/main/default/objects/Opportunity/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <inlineHelpText>Created in Legasuite after PO is sent. Only present when PPI wins the opportunity. Key Field in Closed Stage and Closed Won is selected</inlineHelpText>
    <label>Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>