core/unpackaged/main/default/objects/Opportunity/fields/Order_Number_Relationships__c.field-meta.xml
<CustomField>
    <fullName>Order_Number_Relationships__c</fullName>
    <description>Stores the relationship between Opportunity order numbers, quote numbers, and PO numbers as JSON maintained by the Opportunity Number Matcher component.</description>
    <inlineHelpText>Structured JSON mapping of order numbers to quote numbers and PO numbers.</inlineHelpText>
    <label>Order / Quote / PO Relationships</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>