core/unpackaged/main/default/objects/Opportunity/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <inlineHelpText>Customer PO given in order to place order with PPI.</inlineHelpText>
    <label>PO Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>