core/unpackaged/main/default/objects/Opportunity/fields/PPI_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>PPI_Customer_Number__c</fullName>
    <description>The PPI Account Number</description>
    <formula>Account.External_ID_No_Comma__c</formula>
    <inlineHelpText>This is the PPI Account Number</inlineHelpText>
    <label>PPI Customer Number</label>
    <type>Text</type>
</CustomField>