core/unpackaged/main/default/objects/Opportunity/fields/Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Quote_Number__c</fullName>
    <inlineHelpText>Created in legasuite after Opportunity is created. Key Field required in Quote Creation stage.</inlineHelpText>
    <label>Quote Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>