core/unpackaged/main/default/objects/Opportunity/fields/Quote_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Quote_Response_Time__c</fullName>
    <description>As a sales rep, I want to know the time it took from when a quote was received to when the quote was sent to the customer so I can track this metric.</description>
    <inlineHelpText>Tracks the difference between "RFQ Received Date" and "Initial Quote Sent Date" in minutes. This takes into account business hours.</inlineHelpText>
    <label>Quote Response Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>