core/unpackaged/main/default/objects/Opportunity/fields/Quote_Sent_Age__c.field-meta.xml
<CustomField>
    <fullName>Quote_Sent_Age__c</fullName>
    <formula>NOW() -  Revised_Quote_Sent_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Sent Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>