core/unpackaged/main/default/objects/Opportunity/fields/Quote_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Sent_Date__c</fullName>
    <label>Initial Quote Sent Date</label>
    <type>DateTime</type>
</CustomField>