core/unpackaged/main/default/objects/Opportunity/fields/Quote_to_Order_Time__c.field-meta.xml
<CustomField>
    <fullName>Quote_to_Order_Time__c</fullName>
    <description>As a sales rep, I want to know the time it took from when a quote was sent to the customer to when the quote was mark as Closed - Won so I can track this metric.</description>
    <inlineHelpText>Displays the difference in minutes between Initial Quote Sent Date and when the Opportunity has reached the "Closed - Won" stage. This only takes business days into account.</inlineHelpText>
    <label>Quote to Order Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>