core/unpackaged/main/default/objects/Opportunity/fields/Revised_Quote_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Revised_Quote_Sent_Date__c</fullName>
    <label>Revised Quote Sent Date</label>
    <type>DateTime</type>
</CustomField>