core/unpackaged/main/default/objects/Opportunity/fields/RFQ_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>RFQ_Received_Date__c</fullName>
    <description>As a sales user, I want to track when a request for a quote was submitted so that I can report on metrics around this time frame.</description>
    <inlineHelpText>Date and time that opportunity was converted from Lead by Sales Ops team member. Once converted the request is to be processed in as effecient and timely manner as possible.</inlineHelpText>
    <label>RFQ Received Date</label>
    <type>DateTime</type>
</CustomField>