core/unpackaged/main/default/objects/Opportunity/fields/Sources__c.field-meta.xml
<CustomField>
    <fullName>Sources__c</fullName>
    <description>Identifies the who that is responsible for initiating or authorizing a quote adjustment on the opportunity</description>
    <inlineHelpText>Choose the initiator of the requested quote revision.  Key Field required in Quote Adjustment Stage.</inlineHelpText>
    <label>Revision Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Request</fullName>
            </value>
            <value>
                <fullName>Internal Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>