core/unpackaged/main/default/objects/Opportunity/fields/Special_Pricing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Special_Pricing_Notes__c</fullName>
    <description>Special Pricing Notes</description>
    <inlineHelpText>Please type any notes for the Pricing Managers in this field.  A value is required in this field when Discount Percentage = Other.</inlineHelpText>
    <label>Special Pricing Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>