core/unpackaged/main/default/objects/Opportunity/fields/Special_Pricing_Status__c.field-meta.xml
<CustomField>
    <fullName>Special_Pricing_Status__c</fullName>
    <label>Special Pricing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>