core/unpackaged/main/default/objects/Opportunity/fields/Special_Pricing_Submitter__c.field-meta.xml
<CustomField>
    <fullName>Special_Pricing_Submitter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Special Pricing Submitter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>