core/unpackaged/main/default/objects/Opportunity/fields/State_Text_Only__c.field-meta.xml
<CustomField>
    <fullName>State_Text_Only__c</fullName>
    <formula>TRIM(RIGHT( Account_City_State__c ,LEN( Account_City_State__c) - FIND(",", Account_City_State__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State (Text Only)</label>
    <type>Text</type>
</CustomField>