core/unpackaged/main/default/objects/Opportunity/fields/Validation_Bypass_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Validation_Bypass_Datetime__c</fullName>
    <defaultValue>$System.OriginDateTime</defaultValue>
    <label>Validation Bypass Datetime</label>
    <type>DateTime</type>
</CustomField>