core/unpackaged/main/default/objects/Opportunity/fields/Waiting_On_Emojis__c.field-meta.xml
<CustomField>
    <fullName>Waiting_On_Emojis__c</fullName>
    <formula>IF(
ISBLANK(Waiting_On__c),
"",
TRIM(
IF(INCLUDES(Waiting_On__c, "Purchasing"), " 💰", "") &amp;
IF(INCLUDES(Waiting_On__c, "Outside Sales"), " 💼", "") &amp;
IF(INCLUDES(Waiting_On__c, "Engineering"), " ⚙️", "") &amp;
IF(INCLUDES(Waiting_On__c, "Manufacturing"), " 🏭", "") &amp;
IF(INCLUDES(Waiting_On__c, "Scheduling"), " 📋", "") &amp;
IF(INCLUDES(Waiting_On__c, "Customer"), " 👤", "") &amp;
IF(INCLUDES(Waiting_On__c, "Other"), " ❓", "")
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Waiting On (Emojis)</label>
    <type>Text</type>
</CustomField>