core/unpackaged/main/default/objects/Opportunity/validationRules/Closed_Expired_Automation_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Expired_Automation_Check</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(ISPICKVAL( StageName , 'Closed Expired'),  $Profile.Name != 'System Administrator'),!IsVRBypassed__c,false)</errorConditionFormula>
    <errorMessage>The Closed Expired stage can only be set by automation or administrators.</errorMessage>
</ValidationRule>