core/unpackaged/main/default/objects/Opportunity/validationRules/Open_Task_Stage_Advancement.validationRule-meta.xml
<ValidationRule>
    <fullName>Open_Task_Stage_Advancement</fullName>
    <active>true</active>
    <errorConditionFormula>IF( !IsVRBypassed__c , AND(ISCHANGED(StageName),OR( ISPICKVAL(PRIORVALUE(StageName) , 'Quote Development'),ISPICKVAL( PRIORVALUE(StageName) , 'Quote Adjustments')),  Open_Tasks__c &gt; 0), false)</errorConditionFormula>
    <errorMessage>All tasks must be completed at this stage before changing to a different stage.</errorMessage>
</ValidationRule>