core/unpackaged/main/default/objects/Opportunity/validationRules/Prevent_Quote_Complete_special_pricing.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Quote_Complete_special_pricing</fullName>
    <active>true</active>
    <description>Prevent the procession to quote complete until special pricing has been approved or denied</description>
    <errorConditionFormula>AND(
  ISCHANGED(StageName),
  ISPICKVAL(StageName, "Quote Complete"),
  OR(
    ISPICKVAL(Special_Pricing_Status__c, "Submitted"),
    ISPICKVAL(Special_Pricing_Status__c, "Pending")
  )
)</errorConditionFormula>
    <errorMessage>Can not advance to Quote Complete Stage when special pricing has not been Approved or Denied</errorMessage>
</ValidationRule>