core/unpackaged/main/default/objects/Opportunity/validationRules/Quote_Creation_Quote_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Quote_Creation_Quote_Number</fullName>
    <active>true</active>
    <description>Require Quote Number on stages including and after Quote Development.</description>
    <errorConditionFormula>AND(
OR(
ISPICKVAL(StageName, "Quote Development"),
ISPICKVAL(StageName, "Quote Complete"),
ISPICKVAL(StageName, "Quote Adjustments"),
ISPICKVAL(StageName, "Closed Won")
),
ISBLANK( Quote_Number__c )
)</errorConditionFormula>
    <errorDisplayField>Quote_Number__c</errorDisplayField>
    <errorMessage>A Quote Number is required before continuing to further stages.</errorMessage>
</ValidationRule>