core/unpackaged/main/default/objects/Opportunity/validationRules/Sources_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Sources_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
    ISBLANK(TEXT(Sources__c)),
    IF(
        ISPICKVAL( PRIORVALUE(StageName) , "Quote Complete"), 
        false,
        IF(
            AND(
                ISPICKVAL( PRIORVALUE(StageName) , "Quote Adjustments"),
                ISPICKVAL( StageName , "Closed Won")
            ),
            true,
            false
        )
    ),
    false)</errorConditionFormula>
    <errorDisplayField>Sources__c</errorDisplayField>
    <errorMessage>Sources must be filled in before proceeding to the next stage.</errorMessage>
</ValidationRule>