core/unpackaged/main/default/objects/Opportunity/listViews/All_Open_Opportunities.listView-meta.xml
<ListView>
    <fullName>All_Open_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Number__c</columns>
    <columns>Opportunity_Contact__c</columns>
    <columns>OPPORTUNITY.TYPE</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.LEAD_SOURCE</columns>
    <columns>Open_Tasks__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Closed Won,Closed Lost,Closed Expired</value>
    </filters>
    <label>All Open Opportunities</label>
</ListView>